// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component H4 Snapshot primary color of the theme 1`] = `
<h4
  className="jsx-682805949"
>
  Heading 4
</h4>
`;

exports[`Component H4 Snapshot secondary font-family of the theme 1`] = `
<h4
  className="jsx-4238558787"
>
  Heading 4
</h4>
`;

exports[`Component H4 Snapshot without arguments, take the default values 1`] = `
<h4
  className="jsx-3376955773"
>
  Heading 4
</h4>
`;
